--- a/Design/Render.css
+++ b/Design/Render.css
@@ -552,6 +552,8 @@ ul.iArrow li.__sel.__lod a { background-image:url(Img/loader-white-100x12x1.png)
 	white-space:nowrap;
 	overflow:hidden;
 	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
 }
 
 .iLeftButton, .iRightButton,
@@ -759,7 +761,7 @@ li.iRadio a label { display:none }
 	z-index:100;
 }
 
-.iBar, #iHeader {
+.iBar {
 	position:relative;
 	z-index:1;
 	height:44px;
@@ -777,7 +779,6 @@ li.iRadio a label { display:none }
 	color:inherit;
 }
 
-#iHeader > div { margin-top:-22px }
 #iHeader > div,
 #waHeadTitle {
 	display:none;
@@ -918,4 +919,58 @@ body {
 
 	-webkit-text-size-adjust: none;
 	-webkit-touch-callout: none;
+}
+
+#iHeader {
+	position: relative;
+	z-index: 1;
+
+	height:44px;
+	border-top: solid 1px rgba(255,255,255,.6);
+	border-bottom: solid 1px rgba(0,0,0,.6);
+	background-color:#8195af;
+
+	background-image:
+			-webkit-gradient(linear, left top, left bottom,
+							 from(rgba(255,255,255,.4)),
+							 to(rgba(255,255,255,.05)) ),
+			-webkit-gradient(linear, left top, left bottom,
+							 from(transparent),
+							 to(rgba(0,0,64,.1)) );
+	background-image:
+			-webkit-linear-gradient(top,
+							rgba(255,255,255,.4),
+							rgba(255,255,255,.05)),
+			-webkit-linear-gradient(left,
+							transparent,
+							rgba(0,0,64,.1));
+	background-image:
+			-moz-linear-gradient(top,
+							rgba(255,255,255,.4),
+							rgba(255,255,255,.05)),
+			-moz-linear-gradient(left,
+							transparent,
+							rgba(0,0,64,.1));
+	background-image:
+			linear-gradient(top,
+							rgba(255,255,255,.4),
+							rgba(255,255,255,.05)),
+			linear-gradient(left,
+							transparent,
+							rgba(0,0,64,.1));
+
+	background-repeat: no-repeat;
+	background-position: top left, bottom left;
+	
+	-webkit-background-size: 100% 21px, 100% 22px;
+	-moz-background-size: 100% 21px, 100% 22px;
+	background-size: 100% 21px, 100% 22px;
+	
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+
+	color:#fff;
+	text-shadow: rgba(0,0,0,.7) 0 -1px 0;
+	font-weight: bold;
 }
