--- a/Design/Render.css
+++ b/Design/Render.css
@@ -941,21 +941,21 @@ body {
 			-webkit-linear-gradient(top,
 							rgba(255,255,255,.4),
 							rgba(255,255,255,.05)),
-			-webkit-linear-gradient(left,
+			-webkit-linear-gradient(top,
 							transparent,
 							rgba(0,0,64,.1));
 	background-image:
 			-moz-linear-gradient(top,
 							rgba(255,255,255,.4),
 							rgba(255,255,255,.05)),
-			-moz-linear-gradient(left,
+			-moz-linear-gradient(top,
 							transparent,
 							rgba(0,0,64,.1));
 	background-image:
 			linear-gradient(top,
 							rgba(255,255,255,.4),
 							rgba(255,255,255,.05)),
-			linear-gradient(left,
+			linear-gradient(top,
 							transparent,
 							rgba(0,0,64,.1));
 
@@ -974,3 +974,70 @@ body {
 	text-shadow: rgba(0,0,0,.7) 0 -1px 0;
 	font-weight: bold;
 }
+
+/* Reset extra padding with Firefox */
+.iLayer > button::-moz-focus-inner,
+.iLayer > .iButton::-moz-focus-inner,
+.iLayer > button::-moz-focus-inner,
+.iLayer > input[type="submit"]::-moz-focus-inner,
+.iLayer > input[type="button"]::-moz-focus-inner,
+.iLayer > input[type="reset"]::-moz-focus-inner {
+	padding: 0;
+	border: none;
+}
+
+/* A generic button */
+.iLayer > .iButton,
+.iLayer > button,
+.iLayer > input[type="submit"],
+.iLayer > input[type="button"],
+.iLayer > input[type="reset"] {
+	color: #516691;
+	background-color: #fff;
+	
+	border: solid 1px #a9abae;
+	font-size: 13px;		/* TODO: adjust */
+	font-weight: bold;
+	line-height: 15px;		/* TODO: adjust */
+	padding: 5px 17px 8px;	/* TODO: adjust */
+
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+
+	margin: 0 0 0 10px;
+	cursor: pointer;
+	min-height: 44px;
+	
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.iLayer > .iButton:active,
+.iLayer > button:active,
+.iLayer > input[type="submit"]:active,
+.iLayer > input[type="button"]:active,
+.iLayer > input[type="reset"]:active {
+	color: #fff;
+	background-color: #015de6;
+	background-image:
+			-webkit-gradient(linear, left top, left bottom,
+							from(rgba(255,255,255,.25)),
+							to(rgba(255,255,255,0)) );
+	background-image:
+			-webkit-linear-gradient(top,
+							rgba(255,255,255,.25),
+							rgba(255,255,255,0) );
+	background-image:
+			-moz-linear-gradient(top,
+							rgba(255,255,255,.25),
+							rgba(255,255,255,0) );
+	background-image:
+			linear-gradient(top,
+							rgba(255,255,255,.25),
+							rgba(255,255,255,0) );
+
+}
+
+
