More user-select

--- a/Design/Render.css
+++ b/Design/Render.css
@@ -7,7 +7,9 @@
 	input[type=button],
 	input[type=reset]  {
 
-	-webkit-user-select: none
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
 }
 
 body * {
